--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,15 +18,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'temurin'
+
     - name: Compile Java Code
-      run: javac MyProgram.java
-    - name: Run Java Code
+      run: javac src/main/java/MyProgram.java  # Adjust path as necessary
+
+
+
+
+
+
       run: java MyProgram
 
 
